iphone4 编译运行错误解决

--- a/fillPaintMaster/BackCarViewController.xib
+++ b/fillPaintMaster/BackCarViewController.xib
@@ -26,16 +26,22 @@
                             <rect key="frame" x="124" y="29" width="116" height="106"/>
                             <animations/>
                             <state key="normal" backgroundImage="bB"/>
+                            <state key="selected" backgroundImage="bB0"/>
+                            <state key="highlighted" backgroundImage="bB0"/>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wUB-Ai-NUa">
                             <rect key="frame" x="103" y="135" width="95" height="45"/>
                             <animations/>
                             <state key="normal" backgroundImage="b1"/>
+                            <state key="selected" backgroundImage="b10"/>
+                            <state key="highlighted" backgroundImage="b10"/>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pHD-nK-cKp">
                             <rect key="frame" x="87" y="138" width="89" height="75"/>
                             <animations/>
                             <state key="normal" backgroundImage="b2"/>
+                            <state key="selected" backgroundImage="b20"/>
+                            <state key="highlighted" backgroundImage="b20"/>
                         </button>
                     </subviews>
                     <animations/>
@@ -57,8 +63,11 @@
     </objects>
     <resources>
         <image name="b1" width="150" height="82"/>
+        <image name="b10" width="150" height="82"/>
         <image name="b2" width="150" height="116"/>
+        <image name="b20" width="150" height="116"/>
         <image name="bB" width="150" height="187"/>
+        <image name="bB0" width="150" height="187"/>
         <image name="car3" width="200" height="146"/>
     </resources>
 </document>
