--- a/fillPaintMaster/PaintView0Controller.xib
+++ b/fillPaintMaster/PaintView0Controller.xib
@@ -19,35 +19,23 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1eB-tk-byT">
                     <rect key="frame" x="0.0" y="519" width="320" height="49"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u7R-Rv-yse">
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u7R-Rv-yse">
                             <rect key="frame" x="2" y="1" width="52" height="47"/>
                             <animations/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="47" id="QSO-Wb-BYG"/>
-                                <constraint firstAttribute="width" constant="52" id="XkV-fj-ZDM"/>
-                            </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="18"/>
                             <state key="normal" backgroundImage="cart"/>
                         </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0元" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="atd-K3-8AW">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0元" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="atd-K3-8AW">
                             <rect key="frame" x="62" y="7" width="138" height="34"/>
                             <animations/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="34" id="8NH-3d-whY"/>
-                                <constraint firstAttribute="width" constant="138" id="lav-1a-TIS"/>
-                            </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="18"/>
                             <color key="textColor" red="0.40011452879999998" green="0.40011452879999998" blue="0.40011452879999998" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fLh-It-bYz">
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fLh-It-bYz">
                             <rect key="frame" x="232" y="7" width="80" height="34"/>
                             <animations/>
                             <color key="backgroundColor" red="0.71682453459999995" green="1" blue="0.60469191280000001" alpha="1" colorSpace="calibratedRGB"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="80" id="3ne-TG-a7S"/>
-                                <constraint firstAttribute="height" constant="34" id="BPS-bD-adQ"/>
-                            </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="20"/>
                             <state key="normal" title="预约">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -57,13 +45,7 @@
                     <animations/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="u7R-Rv-yse" firstAttribute="top" secondItem="1eB-tk-byT" secondAttribute="top" constant="1" id="BWL-C6-ZNy"/>
-                        <constraint firstItem="atd-K3-8AW" firstAttribute="top" secondItem="1eB-tk-byT" secondAttribute="top" constant="7" id="Jff-K9-wTQ"/>
-                        <constraint firstItem="atd-K3-8AW" firstAttribute="leading" secondItem="u7R-Rv-yse" secondAttribute="trailing" constant="8" id="LrE-pH-tZh"/>
-                        <constraint firstAttribute="height" constant="49" id="Ozh-pP-fGg"/>
-                        <constraint firstItem="fLh-It-bYz" firstAttribute="top" secondItem="1eB-tk-byT" secondAttribute="top" constant="7" id="lzF-S7-G6O"/>
-                        <constraint firstAttribute="trailing" secondItem="fLh-It-bYz" secondAttribute="trailing" constant="8" id="t08-zq-CtW"/>
-                        <constraint firstItem="u7R-Rv-yse" firstAttribute="leading" secondItem="1eB-tk-byT" secondAttribute="leading" constant="2" id="wlP-ac-kae"/>
+                        <constraint firstAttribute="height" constant="49" id="Tv8-YY-AKO"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eBd-0e-l4J">
@@ -74,13 +56,13 @@
             </subviews>
             <animations/>
             <constraints>
-                <constraint firstItem="1eB-tk-byT" firstAttribute="top" secondItem="eBd-0e-l4J" secondAttribute="bottom" id="6l7-VM-Myv"/>
-                <constraint firstItem="1eB-tk-byT" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Bma-n9-xWW"/>
-                <constraint firstItem="eBd-0e-l4J" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="MUC-QQ-Bu9"/>
-                <constraint firstAttribute="trailing" secondItem="1eB-tk-byT" secondAttribute="trailing" id="N0C-nc-AY3"/>
-                <constraint firstAttribute="bottom" secondItem="1eB-tk-byT" secondAttribute="bottom" id="OgK-44-vyr"/>
-                <constraint firstItem="eBd-0e-l4J" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="W9l-Ll-ZVD"/>
-                <constraint firstAttribute="trailing" secondItem="eBd-0e-l4J" secondAttribute="trailing" id="dZc-MM-Xvg"/>
+                <constraint firstItem="1eB-tk-byT" firstAttribute="top" secondItem="eBd-0e-l4J" secondAttribute="bottom" id="0oA-LV-uUh"/>
+                <constraint firstAttribute="trailing" secondItem="eBd-0e-l4J" secondAttribute="trailing" id="8hP-2e-KRL"/>
+                <constraint firstItem="eBd-0e-l4J" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Ami-j5-NzV"/>
+                <constraint firstItem="eBd-0e-l4J" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="EtV-CD-KqK"/>
+                <constraint firstItem="1eB-tk-byT" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="dE0-wr-UXg"/>
+                <constraint firstAttribute="bottom" secondItem="1eB-tk-byT" secondAttribute="bottom" id="iOX-1o-O2J"/>
+                <constraint firstAttribute="trailing" secondItem="1eB-tk-byT" secondAttribute="trailing" id="luv-Vf-MR9"/>
             </constraints>
             <point key="canvasLocation" x="283" y="314"/>
         </view>
