--- a/fillPaintMaster/LeftCarViewController.xib
+++ b/fillPaintMaster/LeftCarViewController.xib
@@ -26,26 +26,36 @@
                             <rect key="frame" x="48" y="8" width="85" height="82"/>
                             <animations/>
                             <state key="normal" backgroundImage="e1"/>
+                            <state key="selected" backgroundImage="e10"/>
+                            <state key="highlighted" backgroundImage="e10"/>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lcP-OX-oze">
                             <rect key="frame" x="167" y="8" width="85" height="82"/>
                             <animations/>
                             <state key="normal" backgroundImage="f1"/>
+                            <state key="selected" backgroundImage="f10"/>
+                            <state key="highlighted" backgroundImage="f10"/>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dWJ-uY-0NR">
                             <rect key="frame" x="36" y="109" width="86" height="86"/>
                             <animations/>
                             <state key="normal" backgroundImage="c1"/>
+                            <state key="selected" backgroundImage="c10"/>
+                            <state key="highlighted" backgroundImage="c10"/>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q8b-O1-BNy">
                             <rect key="frame" x="169" y="107" width="83" height="81"/>
                             <animations/>
                             <state key="normal" backgroundImage="d1"/>
+                            <state key="selected" backgroundImage="d10"/>
+                            <state key="highlighted" backgroundImage="d10"/>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="twf-rA-98Q">
                             <rect key="frame" x="105" y="107" width="70" height="51"/>
                             <animations/>
                             <state key="normal" backgroundImage="j1"/>
+                            <state key="selected" backgroundImage="j10"/>
+                            <state key="highlighted" backgroundImage="j10"/>
                         </button>
                     </subviews>
                     <animations/>
@@ -67,10 +77,15 @@
     </objects>
     <resources>
         <image name="c1" width="150" height="145"/>
+        <image name="c10" width="150" height="145"/>
         <image name="car0" width="300" height="97"/>
         <image name="d1" width="150" height="133"/>
+        <image name="d10" width="150" height="133"/>
         <image name="e1" width="150" height="163"/>
+        <image name="e10" width="150" height="163"/>
         <image name="f1" width="150" height="170"/>
+        <image name="f10" width="150" height="170"/>
         <image name="j1" width="150" height="109"/>
+        <image name="j10" width="150" height="109"/>
     </resources>
 </document>
