--- a/fillPaintMaster/TopCarViewController.xib
+++ b/fillPaintMaster/TopCarViewController.xib
@@ -26,16 +26,22 @@
                             <rect key="frame" x="31" y="112" width="95" height="93"/>
                             <animations/>
                             <state key="normal" backgroundImage="hH"/>
+                            <state key="selected" backgroundImage="hH0"/>
+                            <state key="highlighted" backgroundImage="hH0"/>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yzO-5x-ce3">
                             <rect key="frame" x="54" y="10" width="82" height="87"/>
                             <animations/>
                             <state key="normal" backgroundImage="iI"/>
+                            <state key="selected" backgroundImage="iI0"/>
+                            <state key="highlighted" backgroundImage="iI0"/>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zoS-MZ-GxL">
                             <rect key="frame" x="148" y="106" width="88" height="79"/>
                             <animations/>
                             <state key="normal" backgroundImage="gG"/>
+                            <state key="selected" backgroundImage="gG0"/>
+                            <state key="highlighted" backgroundImage="gG0"/>
                         </button>
                     </subviews>
                     <animations/>
@@ -58,7 +64,10 @@
     <resources>
         <image name="car4" width="300" height="136"/>
         <image name="gG" width="150" height="144"/>
+        <image name="gG0" width="150" height="144"/>
         <image name="hH" width="150" height="232"/>
+        <image name="hH0" width="150" height="232"/>
         <image name="iI" width="150" height="326"/>
+        <image name="iI0" width="150" height="326"/>
     </resources>
 </document>
